# Ganymede

./: .gitignore  MWO.py  README.md  config_python_windows.py  pyproject.toml
Applications/Constant_Pout/: cpout.py
General/: ganymede.py
Jupyter/: ScriptTest1.ipynb
RF/: MWO.py
RF/Applications/AWR Optimization/: const_Pout.py  const_Pout_1goal.py  data.ddf  functional.py  plot_data.m  scan_3053_4x100_12-Aug-2021 1240.npy  scan_3053_4x100_12-Aug-2021 1312.npy  scan_3053_4x100_16-Aug-2021 1035.npy  scan_3053_4x100_16-Aug-2021 1147.npy  scan_3053_4x100_16-Aug-2021 1152.ddf  scan_3053_4x100_16-Aug-2021 1158.ddf  scan_3053_4x100_16-Aug-2021 1251.ddf  scan_3053_4x100_16-Aug-2021 1305.ddf  scan_3053_4x100_16-Aug-2021 1309.ddf  scan_3053_4x100_16-Aug-2021 1312.ddf  scan_3053_4x100_16-Aug-2021 1345.ddf  scan_3053_4x100_16-Aug-2021 1354.ddf  scan_3053_4x100_16-Aug-2021 1401.ddf  scan_3053_4x100_16-Aug-2021 1759.ddf  scan_3053_4x100_ts.ddf
RF/Applications/Constant_Pout/: MWO.py  ScriptTest1.py  TestFile.npy  begin.py  cpout_conf.py  data.npy  plot_Data.asv  plot_Data.m  plot_data.py  plot_data_limitedPin.asv  plot_data_limitedPin.m  scan_3053_4x100_12-Aug-2021 0929.npy  write_test.py
RF/Jupyter/: Optimizer.ipynb
Scripts/: pytools.cpp
Scripts/AWR Scripts/: LP_Pin_Sweep.py  const_Pout.py  const_Pout_1goal.py  functional.py
Scripts/AWR Scripts/Design Tools/: EM_Batch_end_alert.py  optimzer_end_alert.py
src/: ganymede.py
