[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ganymede"
version = "0.0.0"
authors = [
  { name="Grant Giesbrecht", email="grant.giesbrecht@colorado.edu" },
]
description = "Helper functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Grant-Giesbrecht/ganymede"
Issues = "https://github.com/Grant-Giesbrecht/ganymede/issues"